--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,10 +1,10 @@
 .produk {
-    border: 1px solid #A66CFF;
+    border: 1px solid #5800FF;
     background-color: #9c9efe7c;
 }
 section {
     text-align: center;
-    border: 2px solid #A66CFF;
+    border: 2px solid #5800FF;
     background-color: #9c9efe7c;
     padding: 30px;
     width: 500px;
@@ -14,30 +14,24 @@ section {
     border-radius: 5px;
 }
 .brand {
-    border: 2px solid #A66CFF;
+    border: 2px solid #5800FF;
     background-color: #9c9efe7c;
     border-radius: 5px;
 }
 .brand1 {
-    border: 2px solid #A66CFF;
-    background-color: #9c9efe7c;
-    border-radius: 5px;
-    margin: 15px;
-}
-.brand2 {
-    border: 2px solid #A66CFF;
+    border: 2px solid #5800FF;
     background-color: #9c9efe7c;
     border-radius: 5px;
     margin: 15px;
 }
 .tipe {
-    border: 2px solid #A66CFF;
+    border: 2px solid #5800FF;
     background-color: #9c9efe7c;
     border-radius: 5px;
     padding: 5px;
 }
 .jenis {
-    border: 2px solid #A66CFF;
+    border: 2px solid #5800FF;
     background-color: #9c9efe7c;
     border-radius: 5px;
     padding: 5px;
