--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,33 +1,58 @@
 .container {
-    margin: auto;
-    width: 500px;
-    border: 1px solid black;
-    padding: 20px;
-    /* margin-top: 100px; */
-    border-radius: 10px;
+  margin: auto;
+  width: 500px;
+  border: 1px solid black;
+  padding: 20px;
+  /* margin-top: 100px; */
+  border-radius: 10px;
 }
 .container h1 {
-    text-align: center;
+  text-align: center;
 }
 .layout {
-    border: 1px solid black;
-    margin: 20px;
-    border-radius: 10px;
-    padding: 10px;
-    display: flex;
-    justify-content: space-between;
+  border: 1px solid black;
+  margin: 20px;
+  border-radius: 10px;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
 }
 .button {
-    color: white;
-    margin: 0px 10px;
-    padding: 10px 50px;
-    border: 1px solid grey;
-    border-radius: 2px;
-    cursor: pointer;
-    transition: all 100ms ease-in-out;
+  color: white;
+  margin: 0px 10px;
+  padding: 10px 50px;
+  border: 1px solid grey;
+  border-radius: 3px;
+  cursor: pointer;
+  transition: all 100ms ease-in-out;
 }
 .button:hover {
-    border: 1px solid black;
-    transition: all 100ms ease-in-out;
-    color: black;
+  border: 1px solid black;
+  transition: all 100ms ease-in-out;
+  color: black;
+}
+.input {
+  display: flex;
+  flex-direction: column;
+  padding: 10px 80px;
+}
+.input-text {
+  width: 100%;
+  height: 25px;
+  border-radius: 5px;
+  margin: 5px 0px;
+}
+.error {
+  color: red;
+  font-style: italic;
+}
+form {
+  width: 500px;
+  /* height: 200px; */
+  /* margin: auto; */
+  margin: 70px 0px 0px 0px;
+  background-color: #5A8F7B;
+  border-radius: 5px;
+  border: 1px solid #355764;
+  padding: 30px 0px;
 }
