english course [home]

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.cdnfonts.com/css/comicy');
+@import url('https://fonts.cdnfonts.com/css/poppins');
 
 body {
   margin: 0;
@@ -18,4 +20,11 @@ code {
 
 .bg {
   background-image: url(./image/imageHero.png);
+}
+
+.comicy {
+  font-family: 'Comicy', sans-serif;
+}
+.poppins {
+  font-family: 'Poppins', sans-serif;                          
 }
